Fix issues related to parent project update